--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,11 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# PyCharm IDE Configuration
+.idea/
+
+# Data directory for Database
+database/DATA
+
+
