Add server configuration flags

--- a/server/config.ini
+++ b/server/config.ini
@@ -1,4 +1,8 @@
 [SERVER]
+SERVER_PORT = 5001
+SERVER_DEBUG = True
+SERVER_PUBLIC = False
+
 DATABASE_HOST = localhost
 DATABASE_USER = root
 DATABASE_PASSWORD = root
