Fix SQL queries

--- a/server/config.ini
+++ b/server/config.ini
@@ -1,7 +1,7 @@
 [SERVER]
 SERVER_PORT = 5001
 SERVER_DEBUG = True
-SERVER_PUBLIC = False
+SERVER_PUBLIC = True
 
 DATABASE_HOST = localhost
 DATABASE_USER = root
@@ -9,3 +9,6 @@ DATABASE_PASSWORD = root
 DATABASE_NAME = fadb
 DATABASE_TIMEZONE = +00:00
 DATABASE_POOL_SIZE = 10
+
+# Replace with data root
+DATA_ROOT_DIR = '' 
