--- a/server/config.ini
+++ b/server/config.ini
@@ -11,4 +11,4 @@ DATABASE_TIMEZONE = +00:00
 DATABASE_POOL_SIZE = 10
 
 # Replace with data root
-DATA_ROOT_DIR = '' 
+DATA_ROOT_DIR = /home/anyone/repos/FastAnnotation/database/DATA/
