--- a/client/config.ini
+++ b/client/config.ini
@@ -1,3 +1,5 @@
 [CLIENT]
-# Replace with production URL
+# Replace with production URL 130.216.239.117
 SERVER_URL = http://localhost:5001/
+
+REFIT_IMAGES = False
