--- a/server/config.ini
+++ b/server/config.ini
@@ -1,6 +1,7 @@
 [SERVER]
 SERVER_PORT = 5001
 SERVER_DEBUG = True
+SERVER_PUBLIC = True
 SERVER_PUBLIC = False
 
 DATABASE_HOST = localhost
@@ -9,3 +10,6 @@ DATABASE_PASSWORD = root
 DATABASE_NAME = fadb
 DATABASE_TIMEZONE = +00:00
 DATABASE_POOL_SIZE = 10
+
+# Replace with data root
+DATA_ROOT_DIR = ""
